CDC #285 - Adding messages/warnings to MediaContentForm and RelatedMediaContents components

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -249,6 +249,14 @@
       "name": "Name"
     }
   },
+  "MediaContentForm": {
+    "messages": {
+      "upload": {
+        "content": "Please save the record to upload your file.",
+        "header": "Warning!"
+      }
+    }
+  },
   "MediaContentUploadForm": {
     "labels": {
       "name": "Name"
@@ -277,6 +285,18 @@
       "required": "Image {{name}} - The following fields are required: {{fields}}"
     },
     "title": "Select Media"
+  },
+  "MediaUploadingMessage": {
+    "messages": {
+      "multiple": {
+        "content": "Your files have been uploaded. Images may take time to process. Please refresh the page if you cannot see your images.",
+        "header": "Files Uploaded"
+      },
+      "single": {
+        "content": "Your file has been uploaded. Images may take time to process. Please refresh the page if you cannot see your image.",
+        "header": "File Uploaded"
+      }
+    }
   },
   "MergeButton": {
     "buttons": {
